@@ -187,6 +187,36 @@ function feeds_schema() {
       'guid' => array(array('guid', 255)),
     ),
   );
+  $schema['feeds_term_item'] = array(
+    'description' => 'Tracks imported terms.',
+    'fields' => array(
+      'tid' => array(
+        'type' => 'int',
+        'unsigned' => TRUE,
+        'not null' => TRUE,
+        'default' => 0,
+        'description' => 'Imported term id.',
+      ),
+      'id' => array(
+        'type' => 'varchar',
+        'length' => 128,
+        'not null' => TRUE,
+        'default' => '',
+        'description' => 'The id of the fields object that is the creator of this item.',
+      ),
+      'feed_nid' => array(
+        'type' => 'int',
+        'unsigned' => TRUE,
+        'not null' => TRUE,
+        'description' => t("Node id of the owner feed, if available."),
+      ),
+    ),
+    'primary key' => array('tid'),
+    'indexes' => array(
+      'id_feed_nid' => array('id', 'feed_nid'),
+      'feed_nid' => array('feed_nid'),
+    ),
+  );
   $schema['feeds_push_subscriptions'] = array(
     'description' => 'PubSubHubbub subscriptions.',
     'fields' => array(
@@ -512,4 +542,43 @@ function feeds_update_6010() {
     drupal_set_message(t('Replacement modules have been installed. <strong>Review enabled state of importer configurations on admin/build/feeds and Feeds modules on admin/build/modules.</strong>'));
   }
   return array();
+}
+
+/**
+ * Add imported flag for terms.
+ */
+function feeds_update_6011() {
+  $ret = array();
+  $schema = array(
+    'description' => 'Tracks imported terms.',
+    'fields' => array(
+      'tid' => array(
+        'type' => 'int',
+        'unsigned' => TRUE,
+        'not null' => TRUE,
+        'default' => 0,
+        'description' => 'Imported term id.',
+      ),
+      'id' => array(
+        'type' => 'varchar',
+        'length' => 128,
+        'not null' => TRUE,
+        'default' => '',
+        'description' => 'The id of the fields object that is the creator of this item.',
+      ),
+      'feed_nid' => array(
+        'type' => 'int',
+        'unsigned' => TRUE,
+        'not null' => TRUE,
+        'description' => t("Node id of the owner feed, if available."),
+      ),
+    ),
+    'primary key' => array('tid'),
+    'indexes' => array(
+      'id_feed_nid' => array('id', 'feed_nid'),
+      'feed_nid' => array('feed_nid'),
+    ),
+  );
+  db_create_table($ret, 'feeds_term_item', $schema);
+  return $ret;
 }
