@@ -350,6 +350,29 @@ function _feeds_nodeapi_node_processor($node, $op) {
 }
 
 /**
+ * Implementation of hook_taxonomy().
+ */
+function feeds_taxonomy($op = NULL, $type = NULL, $term = NULL) {
+  if ($type =='term' && $term['tid']) {
+    switch ($op) {
+      case 'delete':
+        db_query("DELETE FROM {feeds_term_item} WHERE tid = %d", $term['tid']);
+        break;
+      case 'update':
+        if (isset($term['importer_id'])) {
+          db_query("DELETE FROM {feeds_term_item} WHERE tid = %d", $term['tid']);
+        }
+      case 'insert':
+        if (isset($term['importer_id'])) {
+          $term['id'] = $term['importer_id'];
+          drupal_write_record('feeds_term_item', $term);
+        }
+        break;
+    }
+  }
+}
+
+/**
  * Implementation of hook_form_alter().
  */
 function feeds_form_alter(&$form, $form_state, $form_id) {
